rust/telex-macros-core/src/snapshots/telex_macros_core__tests__explicit_request_context_opt_in.snap
---
source: rust/telex-macros-core/src/lib.rs
expression: "generate(quote!\n{\n    trait Audit\n    {\n        #[telex::context] async fn record(&self, payload: String) -> &'telex\n        str; async fn ping(&self) -> u64;\n    }\n})"
---
#[allow(non_snake_case, clippy::all)]
pub fn audit_service_descriptor() -> &'static ::telex::session::ServiceDescriptor {
    static DESCRIPTOR: std::sync::OnceLock<&'static ::telex::session::ServiceDescriptor> =
        std::sync::OnceLock::new();
    DESCRIPTOR.get_or_init(|| {
        let methods: Vec<&'static ::telex::session::MethodDescriptor> = vec![
            ::telex::hash::method_descriptor_with_retry::<(String,), &'static str>(
                "Audit",
                "record",
                &["payload"],
                None,
                ::telex::RetryPolicy {
                    persist: false,
                    idem: false,
                },
            ),
            ::telex::hash::method_descriptor_with_retry::<(), u64>(
                "Audit",
                "ping",
                &[],
                None,
                ::telex::RetryPolicy {
                    persist: false,
                    idem: false,
                },
            ),
        ];
        Box::leak(Box::new(::telex::session::ServiceDescriptor {
            service_name: "Audit",
            methods: Box::leak(methods.into_boxed_slice()),
            doc: None,
        }))
    })
}
pub trait Audit
where
    Self: ::telex::MaybeSend + ::telex::MaybeSync,
{
    fn record<'telex>(
        &self,
        cx: &::telex::RequestContext<'_>,
        call: impl ::telex::Call<'telex, &'telex str, ::core::convert::Infallible>,
        payload: String,
    ) -> impl std::future::Future<Output = ()> + ::telex::MaybeSend;
    fn ping(&self) -> impl std::future::Future<Output = u64> + ::telex::MaybeSend;
}
#[doc = r" Dispatcher for this service."]
#[doc = r""]
#[doc = r" Wraps a handler and implements [`#telex::Handler`] by routing incoming"]
#[doc = r" calls to the appropriate trait method by method ID."]
#[derive(Clone)]
pub struct AuditDispatcher<H> {
    handler: H,
    middlewares: Vec<::std::sync::Arc<dyn ::telex::ServerMiddleware>>,
}
impl<H> AuditDispatcher<H>
where
    H: Audit + Clone + ::telex::MaybeSend + ::telex::MaybeSync + 'static,
{
    #[doc = r" Create a new dispatcher wrapping the given handler."]
    pub fn new(handler: H) -> Self {
        Self {
            handler,
            middlewares: vec![],
        }
    }
    #[doc = r" Append a server middleware to this dispatcher."]
    pub fn with_middleware(mut self, middleware: impl ::telex::ServerMiddleware) -> Self {
        self.middlewares.push(::std::sync::Arc::new(middleware));
        self
    }
    async fn run_pre_hooks(&self, context: &::telex::RequestContext<'_>) {
        for middleware in &self.middlewares {
            middleware.pre(context).await;
        }
    }
    async fn run_post_hooks(
        &self,
        context: &::telex::RequestContext<'_>,
        outcome: ::telex::ServerCallOutcome,
    ) {
        for middleware in self.middlewares.iter().rev() {
            middleware.post(context, outcome).await;
        }
    }
}
impl<H, R> ::telex::Handler<R> for AuditDispatcher<H>
where
    H: Audit + Clone + ::telex::MaybeSend + ::telex::MaybeSync + 'static,
    R: ::telex::ReplySink,
{
    fn retry_policy(&self, method_id: ::telex::MethodId) -> ::telex::RetryPolicy {
        if method_id == audit_service_descriptor().methods[0usize].id {
            return ::telex::RetryPolicy {
                persist: false,
                idem: false,
            };
        }
        if method_id == audit_service_descriptor().methods[1usize].id {
            return ::telex::RetryPolicy {
                persist: false,
                idem: false,
            };
        }
        ::telex::RetryPolicy::VOLATILE
    }
    fn args_have_channels(&self, method_id: ::telex::MethodId) -> bool {
        if method_id == audit_service_descriptor().methods[0usize].id {
            return ::telex::hash::shape_contains_channel(
                audit_service_descriptor().methods[0usize].args_shape,
            );
        }
        if method_id == audit_service_descriptor().methods[1usize].id {
            return ::telex::hash::shape_contains_channel(
                audit_service_descriptor().methods[1usize].args_shape,
            );
        }
        false
    }
    fn response_wire_shape(
        &self,
        method_id: ::telex::MethodId,
    ) -> Option<&'static ::telex::facet::Shape> {
        if method_id == audit_service_descriptor().methods[0usize].id {
            return Some (< Result < & 'static str , :: telex :: TelexError < :: core :: convert :: Infallible >> as :: telex :: facet :: Facet < 'static >> :: SHAPE ,) ;
        }
        if method_id == audit_service_descriptor().methods[1usize].id {
            return Some (< Result < u64 , :: telex :: TelexError < :: core :: convert :: Infallible >> as :: telex :: facet :: Facet < 'static >> :: SHAPE ,) ;
        }
        None
    }
    async fn handle(
        &self,
        call: ::telex::SelfRef<::telex::RequestCall<'static>>,
        reply: R,
        schemas: ::std::sync::Arc<::telex::SchemaRecvTracker>,
    ) {
        let method_id = call.method_id;
        let args_bytes = match &call.args {
            ::telex::Payload::PostcardBytes(bytes) => bytes,
            _ => {
                reply
                    .send_error(
                        ::telex::TelexError::<::core::convert::Infallible>::InvalidPayload(
                            "args not PostcardBytes".into(),
                        ),
                    )
                    .await;
                return;
            }
        };
        if method_id == audit_service_descriptor().methods[0usize].id {
            let deser_result = if let Some(binder) = reply.channel_binder() {
                ::telex::with_channel_binder(binder, || {
                    ::telex::schema_deser::schema_deserialize_args_borrowed::<(String,)>(
                        args_bytes, method_id, &schemas,
                    )
                })
            } else {
                ::telex::schema_deser::schema_deserialize_args_borrowed::<(String,)>(
                    args_bytes, method_id, &schemas,
                )
            };
            let args: (String,) = match deser_result {
                Ok(v) => v,
                Err(e) => {
                    ::std::eprintln!(
                        "[rpc] dispatch args decode failed: method={:?} error={}",
                        method_id,
                        e
                    );
                    reply
                        .send_typed_error::<&'static str, ::core::convert::Infallible>(
                            ::telex::TelexError::<::core::convert::Infallible>::InvalidPayload(
                                e.to_string(),
                            ),
                        )
                        .await;
                    return;
                }
            };
            ::std::eprintln!("[rpc] dispatch invoking method={:?}", method_id);
            let (payload,) = args;
            let extensions = ::telex::Extensions::new();
            let context = ::telex::RequestContext::with_extensions(
                audit_service_descriptor().methods[0usize],
                &call.metadata,
                &extensions,
            );
            if !self.middlewares.is_empty() {
                self.run_pre_hooks(&context).await;
            }
            let (reply, outcome_handle) = ::telex::observe_reply(reply);
            let sink_call = ::telex::SinkCall::new(reply);
            self.handler.record(&context, sink_call, payload).await;
            if !self.middlewares.is_empty() {
                self.run_post_hooks(&context, outcome_handle.outcome())
                    .await;
            }
            return;
        }
        if method_id == audit_service_descriptor().methods[1usize].id {
            let deser_result = if let Some(binder) = reply.channel_binder() {
                ::telex::with_channel_binder(binder, || {
                    ::telex::schema_deser::schema_deserialize_args_borrowed::<()>(
                        args_bytes, method_id, &schemas,
                    )
                })
            } else {
                ::telex::schema_deser::schema_deserialize_args_borrowed::<()>(
                    args_bytes, method_id, &schemas,
                )
            };
            let args: () = match deser_result {
                Ok(v) => v,
                Err(e) => {
                    ::std::eprintln!(
                        "[rpc] dispatch args decode failed: method={:?} error={}",
                        method_id,
                        e
                    );
                    reply
                        .send_typed_error::<u64, ::core::convert::Infallible>(
                            ::telex::TelexError::<::core::convert::Infallible>::InvalidPayload(
                                e.to_string(),
                            ),
                        )
                        .await;
                    return;
                }
            };
            ::std::eprintln!("[rpc] dispatch invoking method={:?}", method_id);
            let () = args;
            let extensions = ::telex::Extensions::new();
            let context = ::telex::RequestContext::with_extensions(
                audit_service_descriptor().methods[1usize],
                &call.metadata,
                &extensions,
            );
            if !self.middlewares.is_empty() {
                self.run_pre_hooks(&context).await;
            }
            let (reply, outcome_handle) = ::telex::observe_reply(reply);
            let value = self.handler.ping().await;
            let sink_call = ::telex::SinkCall::new(reply);
            ::telex::Call::<'_, u64, ::core::convert::Infallible>::ok(sink_call, value).await;
            if !self.middlewares.is_empty() {
                self.run_post_hooks(&context, outcome_handle.outcome())
                    .await;
            }
            return;
        }
        reply
            .send_error(::telex::TelexError::<::core::convert::Infallible>::UnknownMethod)
            .await;
    }
}
#[doc = "Client for the `Audit` service.\n\nStores a type-erased [`Caller`](:: telex::Caller) implementation."]
#[must_use = "Dropping this client may close the connection if it is the last caller."]
#[derive(Clone)]
pub struct AuditClient {
    caller: ::telex::ErasedCaller,
}
impl AuditClient {
    #[doc = r" Create a new client wrapping the given caller."]
    pub fn new(caller: impl ::telex::Caller) -> Self {
        Self {
            caller: ::telex::ErasedCaller::new(caller),
        }
    }
    #[doc = r" Append a client middleware to this client."]
    pub fn with_middleware(self, middleware: impl ::telex::ClientMiddleware) -> Self {
        Self {
            caller: self
                .caller
                .with_middleware(audit_service_descriptor(), middleware),
        }
    }
    #[doc = r" Resolve when the underlying connection closes."]
    pub async fn closed(&self) {
        ::telex::Caller::closed(&self.caller).await;
    }
    #[doc = r" Return whether the underlying connection is still considered connected."]
    pub fn is_connected(&self) -> bool {
        ::telex::Caller::is_connected(&self.caller)
    }
    pub async fn record(
        &self,
        payload: String,
    ) -> Result<::telex::SelfRef<&'static str>, ::telex::TelexError> {
        let method_id = audit_service_descriptor().methods[0usize].id;
        let args = (payload,);
        let mut metadata = Default::default();
        ::telex::ensure_channel_retry_mode(&mut metadata, ::telex::ChannelRetryMode::None);
        let req = ::telex::RequestCall {
            method_id,
            args: ::telex::Payload::outgoing(&args),
            metadata,
            schemas: Default::default(),
        };
        let with_tracker = match ::telex::Caller::call(&self.caller, req).await {
            Ok(with_tracker) => with_tracker,
            Err(e) => {
                return Err(match e {
                    ::telex::TelexError::UnknownMethod => {
                        ::telex::TelexError::<::core::convert::Infallible>::UnknownMethod
                    }
                    ::telex::TelexError::InvalidPayload(msg) => {
                        ::telex::TelexError::<::core::convert::Infallible>::InvalidPayload(msg)
                    }
                    ::telex::TelexError::Cancelled => {
                        ::telex::TelexError::<::core::convert::Infallible>::Cancelled
                    }
                    ::telex::TelexError::ConnectionClosed => {
                        ::telex::TelexError::<::core::convert::Infallible>::ConnectionClosed
                    }
                    ::telex::TelexError::SessionShutdown => {
                        ::telex::TelexError::<::core::convert::Infallible>::SessionShutdown
                    }
                    ::telex::TelexError::SendFailed => {
                        ::telex::TelexError::<::core::convert::Infallible>::SendFailed
                    }
                    ::telex::TelexError::Indeterminate => {
                        ::telex::TelexError::<::core::convert::Infallible>::Indeterminate
                    }
                    ::telex::TelexError::User(never) => match never {},
                });
            }
        };
        let ::telex::WithTracker {
            value: response,
            tracker: schema_tracker,
        } = with_tracker;
        response.try_repack(|resp, _bytes| {
            let ret_bytes = match &resp.ret {
                ::telex::Payload::PostcardBytes(bytes) => bytes,
                _ => {
                    return Err(
                        ::telex::TelexError::<::core::convert::Infallible>::InvalidPayload(
                            "response not PostcardBytes".into(),
                        ),
                    );
                }
            };
            let result: Result<&'static str, ::telex::TelexError<::core::convert::Infallible>> =
                ::telex::schema_deser::schema_deserialize_response_borrowed::<
                    Result<&'static str, ::telex::TelexError<::core::convert::Infallible>>,
                >(ret_bytes, method_id, &schema_tracker)
                .map_err(|e| {
                    ::telex::TelexError::<::core::convert::Infallible>::InvalidPayload(
                        e.to_string(),
                    )
                })?;
            match result {
                Ok(ret) => Ok(ret),
                Err(err) => Err(err),
            }
        })
    }
    pub async fn ping(&self) -> Result<u64, ::telex::TelexError> {
        let method_id = audit_service_descriptor().methods[1usize].id;
        let args = ();
        let mut metadata = Default::default();
        ::telex::ensure_channel_retry_mode(&mut metadata, ::telex::ChannelRetryMode::None);
        let req = ::telex::RequestCall {
            method_id,
            args: ::telex::Payload::outgoing(&args),
            metadata,
            schemas: Default::default(),
        };
        let with_tracker = match ::telex::Caller::call(&self.caller, req).await {
            Ok(with_tracker) => with_tracker,
            Err(e) => {
                return Err(match e {
                    ::telex::TelexError::UnknownMethod => {
                        ::telex::TelexError::<::core::convert::Infallible>::UnknownMethod
                    }
                    ::telex::TelexError::InvalidPayload(msg) => {
                        ::telex::TelexError::<::core::convert::Infallible>::InvalidPayload(msg)
                    }
                    ::telex::TelexError::Cancelled => {
                        ::telex::TelexError::<::core::convert::Infallible>::Cancelled
                    }
                    ::telex::TelexError::ConnectionClosed => {
                        ::telex::TelexError::<::core::convert::Infallible>::ConnectionClosed
                    }
                    ::telex::TelexError::SessionShutdown => {
                        ::telex::TelexError::<::core::convert::Infallible>::SessionShutdown
                    }
                    ::telex::TelexError::SendFailed => {
                        ::telex::TelexError::<::core::convert::Infallible>::SendFailed
                    }
                    ::telex::TelexError::Indeterminate => {
                        ::telex::TelexError::<::core::convert::Infallible>::Indeterminate
                    }
                    ::telex::TelexError::User(never) => match never {},
                });
            }
        };
        let ::telex::WithTracker {
            value: response,
            tracker: schema_tracker,
        } = with_tracker;
        let ret_bytes = match &response.ret {
            ::telex::Payload::PostcardBytes(bytes) => bytes,
            _ => {
                return Err(
                    ::telex::TelexError::<::core::convert::Infallible>::InvalidPayload(
                        "response not PostcardBytes".into(),
                    ),
                );
            }
        };
        let result: Result<u64, ::telex::TelexError<::core::convert::Infallible>> =
            ::telex::schema_deser::schema_deserialize_response::<
                Result<u64, ::telex::TelexError<::core::convert::Infallible>>,
            >(ret_bytes, method_id, &schema_tracker)
            .map_err(|e| {
                ::telex::TelexError::<::core::convert::Infallible>::InvalidPayload(e.to_string())
            })?;
        match result {
            Ok(ret) => Ok(ret),
            Err(err) => Err(err),
        }
    }
}
impl From<::telex::DriverCaller> for AuditClient {
    fn from(caller: ::telex::DriverCaller) -> Self {
        Self::new(caller)
    }
}
